Fixed cut off chat messages in web app

--- a/scss/layout.web/_plugin_chat.web.scss
+++ b/scss/layout.web/_plugin_chat.web.scss
@@ -41,7 +41,7 @@
   */
   overflow-y: scroll;
   padding-top: $general_padding_1;
-  padding-bottom: $title_bar_height + $general_padding_1 + $general_padding_4;
+  padding-bottom: $title_bar_height + $general_padding_5;
   margin-right: 2%;
   margin-left: 2%;
 
